--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
     "start": "node --watch --env-file=.env server.js",
     "test": "jest"
   },
@@ -14,6 +16,9 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
