--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.5",
   "main": "index.js",
   "scripts": {
+    "db-migrate": "npx prisma migrate dev",
+    "db-migrate-test": "env-cmd -f .env.test npx prisma migrate dev",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
     "start": "node --watch --env-file=.env server.js",
@@ -13,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "6.3.1",
     "express": "^4.21.2",
     "sqlite3": "^5.1.7"
   },
@@ -21,6 +24,7 @@
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "prisma": "^6.3.1",
     "supertest": "^7.0.0"
   },
   "pnpm": {
